# js-jquery

./: .ghci  CHANGES.txt  LICENSE  Paths.hs  README.md  Test.hs  js-jquery.cabal
.github/workflows/: ci.yml
Language/Javascript/: JQuery.hs
src/: Paths.hs  Test.hs
src/Language/Javascript/: JQuery.hs
