cabal-version:      >= 1.10
build-type:         Simple
name:               js-jquery
version:            1.11.1
license:            MIT
license-file:       LICENSE
category:           Development
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2014
synopsis:           jQuery bundled for Haskell.
description:
    Description here.
homepage:           https://github.com/ndmitchell/js-jquery#readme
bug-reports:        https://github.com/ndmitchell/js-jquery/issues
tested-with:        GHC==7.8.2, GHC==7.6.3, GHC==7.4.2, GHC==7.2.2
extra-source-files:
    javascript/jquery-1.11.1.js

data-dir: javascript
data-files:
    jquery-1.11.1.min.js

source-repository head
    type:     git
    location: https://github.com/ndmitchell/js-jquery.git

library
    default-language: Haskell2010
    build-depends:
        base == 4.*

    exposed-modules:
        Language.Javascript.JQuery
        Paths_js_jquery

test-suite js-jquery-test
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    main-is: Test.hs
    build-depends:
        base == 4.*,
        HTTP
